--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -1,6 +1,10 @@
 *{
     box-sizing: border-box;
 }
+body{
+    font-family: 'Montserrat',Arial, Helvetica, sans-serif;
+    font-size: 13px;
+}
 header{
     height: 100px;
     background-color: #000;
@@ -31,3 +35,23 @@ header{
 .menu li{
     list-style: none;
 }
+.menu ul{
+    display: flex;
+}
+.menu li a{
+    color: #FFF;
+    text-transform: uppercase;
+    font-weight:600;
+    text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    border-bottom: 5px solid #000;
+}
+.menu li a:hover,
+.menu .active a{
+    border-bottom: 5px solid #828756;
+}
+
