--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -5,6 +5,7 @@ body{
     font-family: 'Montserrat',Arial, Helvetica, sans-serif;
     font-size: 13px;
 }
+/* header */
 header{
     height: 100px;
     background-color: #000;
@@ -24,7 +25,8 @@ header{
 .logoImg{
     width: 80px;
     height: 80px;
-    background-color: darkgoldenrod;
+    background-color: #B28756;
+    border-radius: 50%;
 }
 .menu{
     flex: 1;
@@ -52,6 +54,85 @@ header{
 }
 .menu li a:hover,
 .menu .active a{
-    border-bottom: 5px solid #828756;
+    border-bottom: 5px solid #B28756;
+    color: #ddd;
+}
+/* header */
+
+/* main */
+.banner{
+    height: calc(100vh - 100px);
+    background-color: #333;
+    background-image: url('../IMG/bg.jpg');
+    background-size: cover;
+    background-position: bottom;
+    overflow: hidden; 
+    /* overflow: hidden; - tudo que passar do tamanho do banner ele esconde */
 }
 
+.banner .sliders{
+    width: 1000vw;
+    height: 100%;
+}
+.banner .slide{
+    width: 100vw;
+    height: 100%;
+    display: inline-block;
+    background-color:rgba(0,0,0,0.7) ;
+}
+.banner .slideArea{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
+    color: #FFF;
+    justify-content: center;
+}
+.banner h1{
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 50px;
+}
+.banner h1 span{
+    color:#B28756
+}
+.banner h2{
+    text-transform: uppercase;
+    margin-top: 20px;
+}
+.banner a{
+    display:block;
+    background-color: #B28756;
+    color: #FFF;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 10px 30px;
+    margin-top: 30px;
+    border-radius: 20px;
+}
+.banner .slidersPointers{
+    width: 100vw;
+    height: 20px;
+    position: absolute;
+    margin-top: -50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.banner .pointer{
+    width: 15px;
+    height: 15px;
+    border:2px solid #B28756;
+    border-radius: 8px;
+    margin-left: 5px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.banner .pointer.active{
+    /* quando duas classes que estão juntas no html precisam ser declaradas no css, para que seja aplicada a propriedade ambas não podem ser separadas por espaço */
+    background-color: #B28756;
+}
+
+/* main */
